--- a/find_designers.html
+++ b/find_designers.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>SM|Designers Page</title>
+    <title>Find Designers</title>
 
     <!-- 'Source Sans Pro', 'Oswald' and 'Merriweather' -->
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Oswald:700|Merriweather:700,700italic' rel='stylesheet' type='text/css'>
@@ -18,7 +18,7 @@
         <nav>
           <ul class="header">
             <li><a href="./find_developers.html">Find Developers</a></li>
-            <li><a href="#" class="selected">Find Designers</a></li>
+            <li><a href="#" class="active">Find Designers</a></li>
             <li><a href="#">How it works</a></li>
             <li><a href="#">Our Team</a></li>
             <li><a href="#">Blog</a></li>
@@ -27,146 +27,126 @@
       </div>
     </header>
     <section class=" profiles relative">
-        <div class="container row_1 ">
+        <div class="container row_1 clearfix">
           <ul class="profiles" >
             <li class="box col_1">
               <img class="photo" src="./images/placeholder.png" alt="Some Person">
               <figcaption>Some Person</figcaption>
               <ul class="skills">
-                <li>Sketch</li>
-                <li>Adobe CC</li>
-                <li>Branding</li>
+                <li><a href="#">Sketch</a></li>
+                <li><a href="#">Adobe CC</a></li>
+                <li><a href="#">Branding</a></li>
               </ul>
-              <br>
               <a href="#" class="cta cta_yellow contact">Contact</a>
             </li>
             <li class="box col_2">
                <img class="photo" src="./images/placeholder.png" alt="Some Person">
                <figcaption>Some Person</figcaption>
                <ul class="skills">
-                <li>Sketch</li>
-                <li>Adobe CC</li>
-                <li>Branding</li>
+                <li><a href="#">Sketch</a></li>
+                <li><a href="#">Adobe CC</a></li>
+                <li><a href="#">Branding</a></li>
               </ul>
-              <br>
               <a href="#" class="cta cta_yellow contact">Contact</a>
             </li>
             <li class="box col_3">
                <img class="photo" src="./images/placeholder.png" alt="Some Person">
                <figcaption>Some Person</figcaption>
                <ul class="skills">
-                <li>Sketch</li>
-                <li>Adobe CC</li>
-                <li>Branding</li>
+               <li><a href="#">Sketch</a></li>
+                <li><a href="#">Adobe CC</a></li>
+                <li><a href="#">Branding</a></li>
               </ul>
-              <br>
               <a href="#" class="cta cta_yellow contact">Contact</a>
             </li>
             <li class="box col_4">
                <img class="photo" src="./images/placeholder.png" alt="Some Person">
                <figcaption>Some Person</figcaption>
                <ul class="skills">
-                <li>Sketch</li>
-                <li>Adobe CC</li>
-                <li>Branding</li>
+               <li><a href="#">Sketch</a></li>
+                <li><a href="#">Adobe CC</a></li>
+                <li><a href="#">Branding</a></li>
               </ul>
-              <br>
               <a href="#" class="cta cta_yellow contact">Contact</a>
             </li>
-          </ul>
-        </div>
-        <div class="container row_2">
-          <ul class="profiles" >
             <li class="box col_1">
               <img class="photo" src="./images/placeholder.png" alt="Some Person">
               <figcaption>Some Person</figcaption>
               <ul class="skills">
-                <li>Sketch</li>
-                <li>Adobe CC</li>
-                <li>Branding</li>
+                <li><a href="#">Sketch</a></li>
+                <li><a href="#">Adobe CC</a></li>
+                <li><a href="#">Branding</a></li>
               </ul>
-              <br>
               <a href="#" class="cta cta_yellow contact">Contact</a>
             </li>
             <li class="box col_2">
               <img class="photo" src="./images/placeholder.png" alt="Some Person">
               <figcaption>Some Person</figcaption>
               <ul class="skills">
-                <li>Sketch</li>
-                <li>Adobe CC</li>
-                <li>Branding</li>
+                <li><a href="#">Sketch</a></li>
+                <li><a href="#">Adobe CC</a></li>
+                <li><a href="#">Branding</a></li>
               </ul>
-              <br>
               <a href="#" class="cta cta_yellow contact">Contact</a>
             </li>
             <li class="box col_3">
               <img class="photo" src="./images/placeholder.png" alt="Some Person">
               <figcaption>Some Person</figcaption>
               <ul class="skills">
-                <li>Sketch</li>
-                <li>Adobe CC</li>
-                <li>Branding</li>
+                <li><a href="#">Sketch</a></li>
+                <li><a href="#">Adobe CC</a></li>
+                <li><a href="#">Branding</a></li>
               </ul>
-              <br>
               <a href="#" class="cta cta_yellow contact">Contact</a>
             </li>
             <li class="box col_4">
               <img class="photo" src="./images/placeholder.png" alt="Some Person">
               <figcaption>Some Person</figcaption>
               <ul class="skills">
-                <li>Sketch</li>
-                <li>Adobe CC</li>
-                <li>Branding</li>
+                <li><a href="#">Sketch</a></li>
+                <li><a href="#">Adobe CC</a></li>
+                <li><a href="#">Branding</a></li>
               </ul>
-              <br>
               <a href="#" class="cta cta_yellow contact">Contact</a>
             </li>
-          </ul>
-        </div>
-        <div class="container row_3">
-          <ul class="profiles">
             <li class="box col_1">
               <img class="photo" src="./images/placeholder.png" alt="Some Person">
               <figcaption>Some Person</figcaption>
               <ul class="skills">
-                <li>Sketch</li>
-                <li>Adobe CC</li>
-                <li>Branding</li>
+                <li><a href="#">Sketch</a></li>
+                <li><a href="#">Adobe CC</a></li>
+                <li><a href="#">Branding</a></li>
               </ul>
-              <br>
               <a href="#" class="cta cta_yellow contact">Contact</a>
             </li>
             <li class="box col_2">
               <img class="photo" src="./images/placeholder.png" alt="Some Person">
               <figcaption>Some Person</figcaption>
               <ul class="skills">
-                <li>Sketch</li>
-                <li>Adobe CC</li>
-                <li>Branding</li>
+                <li><a href="#">Sketch</a></li>
+                <li><a href="#">Adobe CC</a></li>
+                <li><a href="#">Branding</a></li>
               </ul>
-              <br>
               <a href="#" class="cta cta_yellow contact">Contact</a>
             </li>
             <li class="box col_3">
               <img class="photo" src="./images/placeholder.png" alt="Some Person">
               <figcaption>Some Person</figcaption>
               <ul class="skills">
-                <li>Sketch</li>
-                <li>Adobe CC</li>
-                <li>Branding</li>
+                <li><a href="#">Sketch</a></li>
+                <li><a href="#">Adobe CC</a></li>
+                <li><a href="#">Branding</a></li>
               </ul>
-              <br>
               <a href="#" class="cta cta_yellow contact">Contact</a>
             </li>
             <li class="box col_4">
               <img class="photo" src="./images/placeholder.png" alt="Some Person">
               <figcaption>Some Person</figcaption>
               <ul class="skills">
-                <li>Sketch</li>
-                <li>Adobe CC</li>
-                <li>Branding</li>
+                <li><a href="#">Sketch</a></li>
+                <li><a href="#">Adobe CC</a></li>
+                <li><a href="#">Branding</a></li>
               </ul>
-              br
               <a href="#" class="cta cta_yellow contact">Contact</a>
             </li>
           </ul>
@@ -175,7 +155,7 @@
 
  
     <footer class="relative">
-      <div class="container">
+      <div class="container clearfix">
         <span class="cr">&copy; 2013 Startup Matchmaker. Made in NY.</span>
       </div>
     </footer>
