--- a/find_developers.html
+++ b/find_developers.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
   	<meta charset="UTF-8">
-  	<title>SM|Developer Page</title>
+  	<title>Find Developers</title>
 
   	<!-- 'Source Sans Pro', 'Oswald' and 'Merriweather' -->
   	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Oswald:700|Merriweather:700,700italic' rel='stylesheet' type='text/css'>
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/styles.css">
   </head>
+  
   <body class="devs">
     <header class="fixed">
       <div class="container clearfix">
@@ -17,7 +18,7 @@
 
         <nav>
           <ul class="header">
-            <li><a href="#" class="selected">Find Developers</a></li>
+            <li><a href="#" class="active">Find Developers</a></li>
             <li><a href="./find_designers.html">Find Designers</a></li>
             <li><a href="#">How it works</a></li>
             <li><a href="#">Our Team</a></li>
@@ -26,147 +27,127 @@
         </nav>
       </div>
     </header>
-    <section class=" profiles relative">
-        <div class="container row_1 ">
+    <section class="profiles relative">
+        <div class="container row_1 clearfix">
           <ul class="profiles" >
             <li class="box col_1">
               <img class="photo" src="./images/placeholder.png" alt="Some Person">
               <figcaption>Some Person</figcaption>
               <ul class="skills">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JS</li>
+                <li><a href="#">HTML</a></li>
+                <li><a href="#">CSS</a></li>
+                <li><a href="#">JS</a></li>
               </ul>
-              <br>
               <a href="#" class="cta cta_yellow contact">Contact</a>
             </li>
             <li class="box col_2">
               <img class="photo" src="./images/placeholder.png" alt="Some Person">
               <figcaption>Some Person</figcaption>
               <ul class="skills">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JS</li>
+                <li><a href="#">HTML</a></li>
+                <li><a href="#">CSS</a></li>
+                <li><a href="#">JS</a></li>
               </ul>
-              <br>
               <a href="#" class="cta cta_yellow contact">Contact</a>
             </li>
             <li class="box col_3">
               <img class="photo" src="./images/placeholder.png" alt="Some Person">
               <figcaption>Some Person</figcaption>
               <ul class="skills">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JS</li>
+                <li><a href="#">HTML</a></li>
+                <li><a href="#">CSS</a></li>
+                <li><a href="#">JS</a></li>
               </ul>
-              <br>
               <a href="#" class="cta cta_yellow contact">Contact</a>
             </li>
             <li class="box col_4">
               <img class="photo" src="./images/placeholder.png" alt="Some Person">
               <figcaption>Some Person</figcaption>
               <ul class="skills">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JS</li>
+                <li><a href="#">HTML</a></li>
+                <li><a href="#">CSS</a></li>
+                <li><a href="#">JS</a></li>
               </ul>
-              <br>
               <a href="#" class="cta cta_yellow contact">Contact</a>
             </li>
-          </ul>
-        </div>
-        <div class="container row_2">
-          <ul class="profiles" >
             <li class="box col_1">
               <img class="photo" src="./images/placeholder.png" alt="Some Person">
               <figcaption>Some Person</figcaption>
               <ul class="skills">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JS</li>
+                <li><a href="#">HTML</a></li>
+                <li><a href="#">CSS</a></li>
+                <li><a href="#">JS</a></li>
               </ul>
-              <br>
               <a href="#" class="cta cta_yellow contact">Contact</a>
             </li>
             <li class="box col_2">
               <img class="photo" src="./images/placeholder.png" alt="Some Person">
               <figcaption>Some Person</figcaption>
               <ul class="skills">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JS</li>
+                <li><a href="#">HTML</a></li>
+                <li><a href="#">CSS</a></li>
+                <li><a href="#">JS</a></li>
               </ul>
-              <br>
               <a href="#" class="cta cta_yellow contact">Contact</a>
             </li>
             <li class="box col_3">
               <img class="photo" src="./images/placeholder.png" alt="Some Person">
               <figcaption>Some Person</figcaption>
               <ul class="skills">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JS</li>
+                <li><a href="#">HTML</a></li>
+                <li><a href="#">CSS</a></li>
+                <li><a href="#">JS</a></li>
               </ul>
-              <br>
               <a href="#" class="cta cta_yellow contact">Contact</a>
             </li>
             <li class="box col_4">
               <img class="photo" src="./images/placeholder.png" alt="Some Person">
               <figcaption>Some Person</figcaption>
               <ul class="skills">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JS</li>
+                <li><a href="#">HTML</a></li>
+                <li><a href="#">CSS</a></li>
+                <li><a href="#">JS</a></li>
               </ul>
-              <br>
               <a href="#" class="cta cta_yellow contact">Contact</a>
             </li>
-          </ul>
-        </div>
-        <div class="container row_3">
-          <ul class="profiles">
             <li class="box col_1">
               <img class="photo" src="./images/placeholder.png" alt="Some Person">
               <figcaption>Some Person</figcaption>
               <ul class="skills">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JS</li>
+                <li><a href="#">HTML</a></li>
+                <li><a href="#">CSS</a></li>
+                <li><a href="#">JS</a></li>
               </ul>
-              <br>
               <a href="#" class="cta cta_yellow contact">Contact</a>
             </li>
             <li class="box col_2">
               <img class="photo" src="./images/placeholder.png" alt="Some Person">
               <figcaption>Some Person</figcaption>
               <ul class="skills">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JS</li>
+                <li><a href="#">HTML</a></li>
+                <li><a href="#">CSS</a></li>
+                <li><a href="#">JS</a></li>
               </ul>
-              <br>
               <a href="#" class="cta cta_yellow contact">Contact</a>
             </li>
             <li class="box col_3">
               <img class="photo" src="./images/placeholder.png" alt="Some Person">
               <figcaption>Some Person</figcaption>
               <ul class="skills">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JS</li>
+                <li><a href="#">HTML</a></li>
+                <li><a href="#">CSS</a></li>
+                <li><a href="#">JS</a></li>
               </ul>
-              <br>
               <a href="#" class="cta cta_yellow contact">Contact</a>
             </li>
             <li class="box col_4">
               <img class="photo" src="./images/placeholder.png" alt="Some Person">
               <figcaption>Some Person</figcaption>
               <ul class="skills">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JS</li>
+                <li><a href="#">HTML</a></li>
+                <li><a href="#">CSS</a></li>
+                <li><a href="#">JS</a></li>
               </ul>
-              br
               <a href="#" class="cta cta_yellow contact">Contact</a>
             </li>
           </ul>
@@ -175,7 +156,7 @@
 
  
     <footer class="relative">
-      <div class="container">
+      <div class="container clearfix">
         <span class="cr">&copy; 2013 Startup Matchmaker. Made in NY.</span>
       </div>
     </footer>
