--- a/find_designers.html
+++ b/find_designers.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body class="devs">
-    <header class="fixed">
+    <header class="dev fixed">
       <div class="container clearfix">
         <h1><a href="./index.html">Startup Matchmaker</a></h1>
 
